--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
 <body>
     <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
+        <!-- navigation -->
+        <nav>
+            <!-- unordered list-->
             <ul>
+                <!-- List item elements-->
                 <li>
+                    <!-- Anchor elements-->
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
                 </li>
                 <li>
@@ -22,11 +26,15 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </div>
+        </nav>
     </header>
-    <div class="hero"></div>
-    <div class="content">
-        <div class="search-engine-optimization">
+
+    <!-- hero/jumbotron-->
+    <section class="hero"></section>
+
+    <!--Search Engine Optimization section-->
+    <section class="content">
+        <div id="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
@@ -47,7 +55,7 @@
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
         </div>
-    </div>
+    </section>
     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
