--- a/index.html
+++ b/index.html
@@ -2,28 +2,32 @@
 <html lang="en-us">
 
 <head>
+    <title>Horiseon Website</title>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
 </head>
 
 <body>
-    <header>
+    <!-- Header -->
+    <header class ="main-header">
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <!-- navigation -->
+        <!-- Navbar -->
         <nav>
             <!-- unordered list-->
             <ul>
                 <!-- List item elements-->
                 <li>
                     <!-- Anchor elements-->
-                    <a href="#search-engine-optimization">Search Engine Optimization</a>
+                    <a href="#search-engine-optimization">
+                        Search Engine Optimization</a>
                 </li>
                 <li>
-                    <a href="#online-reputation-management">Online Reputation Management</a>
+                    <a href="#online-reputation-management">
+                        Online Reputation Management</a>
                 </li>
                 <li>
-                    <a href="#social-media-marketing">Social Media Marketing</a>
+                    <a href="#social-media-marketing">
+                        Social Media Marketing</a>
                 </li>
             </ul>
         </nav>
@@ -32,59 +36,66 @@
     <!-- hero/jumbotron-->
     <section class="hero"></section>
 
-    <!--Search Engine Optimization section-->
+    <!-- section of services Horiseon offers-->
     <section class="content">
-        <div id="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+        <!--Search Engine Optimization service-->
+        <article id="search-engine-optimization" class="content-text">
+            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt ="notebook with various illustrations of brainstorming with SEO"/>
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
-        </div>
-        <div id="online-reputation-management" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
+        </article>
+        <!-- Online-reputation-mangement service-->
+        <article id="online-reputation-management" class="content-text">
+            <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt = "laptop computer with different graphic organizers used for management."/>
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
-        </div>
-        <div id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+        </article>
+        <!-- Social Media Marketing service-->
+        <article id="social-media-marketing" class="content-text">
+            <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt ="people sitting around desk discussing social media ideas"/>
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
-        </div>
+        </article>
     </section>
-    <div class="benefits">
-        <div class="benefit-lead">
+
+    <!-- "Benefits" section, column on right side-->
+    <section class="benefits">
+        <div>
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
-        <div class="benefit-brand">
+        <div>
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
-        <div class="benefit-cost">
+        <div>
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png"></img>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </div>
-    </div>
-    <div class="footer">
+    </section>
+
+    <!--footer-->
+    <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </footer>
 </body>
 
 </html>
