--- a/index.html
+++ b/index.html
@@ -40,32 +40,50 @@
     <section class="content">
         <!--Search Engine Optimization service-->
         <article id="search-engine-optimization" class="content-text">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt ="notebook with various illustrations of brainstorming with SEO"/>
+            <img 
+                src="./assets/images/search-engine-optimization.jpg" 
+                class="float-left" 
+                alt ="notebook with various illustrations of brainstorming with SEO"
+            />
             <h2>Search Engine Optimization</h2>
             <p>
-                The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
+                The dominance of mobile internet use means that users are searching for the right business as they travel, 
+                shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility 
+                and find the right customers for your business.
             </p>
         </article>
         <!-- Online-reputation-mangement service-->
         <article id="online-reputation-management" class="content-text">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt = "laptop computer with different graphic organizers used for management."/>
+            <img 
+                src="./assets/images/online-reputation-management.jpg" 
+                class="float-right" 
+                alt = "laptop computer with different graphic organizers used for management."
+            />
             <h2>Online Reputation Management</h2>
             <p>
-                The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
+                The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection 
+                to say whatever they want about your business. Online Reputation Management gives you the control over what potential 
+                customers see when they search for your business.
             </p>
         </article>
         <!-- Social Media Marketing service-->
         <article id="social-media-marketing" class="content-text">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt ="people sitting around desk discussing social media ideas"/>
+            <img 
+                src="./assets/images/social-media-marketing.jpg" 
+                class="float-left" 
+                alt ="people sitting around desk discussing social media ideas"
+            />
             <h2>Social Media Marketing</h2>
             <p>
-                Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
+                Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which 
+                platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
         </article>
     </section>
 
     <!-- "Benefits" section, column on right side-->
     <section class="benefits">
+        <!-- Lead gerneration section -->
         <div>
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
@@ -73,6 +91,7 @@
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
+        <!-- Brand awareness section-->
         <div>
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" />
@@ -80,6 +99,7 @@
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
+        <!-- Cost Management section -->
         <div>
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png"></img>
@@ -97,5 +117,4 @@
         </p>
     </footer>
 </body>
-
 </html>
