--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
         </nav>
     </header>
 
-    <!-- hero/jumbotron-->
+    <!-- hero-->
     <section class="hero"></section>
 
-    <!-- section of services Horiseon offers-->
+    <!-- Section of services Horiseon offers-->
     <section class="content">
         <!--Search Engine Optimization service-->
         <article id="search-engine-optimization" class="content-text">
@@ -81,7 +81,7 @@
         </article>
     </section>
 
-    <!-- "Benefits" section, column on right side-->
+    <!--"Benefits" section, column on right side-->
     <section class="benefits">
         <!-- Lead gerneration section -->
         <div>
